# google-photo-metadata

./: .gitignore  README.md  pyproject.toml
tests/: scan_metadata.py  test_merge_data.py
