[project]
name = "google-photo-metadata"
version = "0.1.0"
description = ""
authors = [
    {name = "Nick Xydis",email = "nsxydis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "exif (>=1.6.1,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "google_photo_metadata", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
